FileBrowser - get rid of useless operators like FILE_OT_hidedot. #46918

Closed
opened 2015-12-03 10:53:03 +01:00 by Reiner Prokein · 7 comments

System Information
Operating system and graphics card

Windows 7 home 64 Bit
Nvidia 760 gtx

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Not sure if this is a bug or a UI work in progress issue. I cannot change the hotkeys for the icon buttons in the top row of the file browser. The rmb menu doesn't contain a change or add shortcut menu item.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open Blender, go to the file browser. Right click at one of the buttons at the top. I have chosen the hide dot files button here. It has no rmb menu to add or to change the shortcut.

What we have though is shortcuts in the Input manager for some of them. But they use a completely different menu code from what i can see. And provides different tooltips. And when you add the buttons with using the Identifier from the Input nodes, then you can add a button that displays the tooltip, and has a rmb menu where you can change the hotkey.

Wouldn't it be better when the buttons would display the hotkey the tooltip? And would have the rmb menu to change the hotkey?

I have in the second image added such a button with the identifier from the input manager to the space_filebrowser.py file to show what i mean.

filebrowserbuttons1.jpg

filebrowserbuttons2.jpg

**System Information** Operating system and graphics card Windows 7 home 64 Bit Nvidia 760 gtx **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Not sure if this is a bug or a UI work in progress issue. I cannot change the hotkeys for the icon buttons in the top row of the file browser. The rmb menu doesn't contain a change or add shortcut menu item. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Blender, go to the file browser. Right click at one of the buttons at the top. I have chosen the hide dot files button here. It has no rmb menu to add or to change the shortcut. What we have though is shortcuts in the Input manager for some of them. But they use a completely different menu code from what i can see. And provides different tooltips. And when you add the buttons with using the Identifier from the Input nodes, then you can add a button that displays the tooltip, and has a rmb menu where you can change the hotkey. Wouldn't it be better when the buttons would display the hotkey the tooltip? And would have the rmb menu to change the hotkey? I have in the second image added such a button with the identifier from the input manager to the space_filebrowser.py file to show what i mean. ![filebrowserbuttons1.jpg](https://archive.blender.org/developer/F262049/filebrowserbuttons1.jpg) ![filebrowserbuttons2.jpg](https://archive.blender.org/developer/F262051/filebrowserbuttons2.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles
Author

Okay, seems that i have catched with the show/hide dot files the one button of the row that has this behaviour ^^

The other buttons either have already the right code, or no shortcut at all. So it's just about the show/hide tot files button at the moment. It would nevertheless be nice to have the rmb menu with add and change hotkeys at the rest of the buttons too.

Okay, seems that i have catched with the show/hide dot files the one button of the row that has this behaviour ^^ The other buttons either have already the right code, or no shortcut at all. So it's just about the show/hide tot files button at the moment. It would nevertheless be nice to have the rmb menu with add and change hotkeys at the rest of the buttons too.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-12-03 11:59:19 +01:00

Eeek! Having an operator for that is total overkill, this has to be replaced by generic WM_OT_context_toggle one!

Looks like filebrowser has quite a bunch of those, will clean that up.

That said, it won't solve the shortcut issue itself - for that we need a way to match generic WM_OT_context_foo operators with buttons that do direct access to RNA prop, this is more a TODO than a bug really.

Eeek! Having an operator for that is total overkill, this has to be replaced by generic `WM_OT_context_toggle` one! Looks like filebrowser has quite a bunch of those, will clean that up. That said, it won't solve the shortcut issue itself - for that we need a way to match generic WM_OT_context_foo operators with buttons that do direct access to RNA prop, this is more a TODO than a bug really.
Bastien Montagne changed title from Can't display the shortcut in the tooltip and can't change hotkey at the icon buttons in the file browser to FileBrowser - get rid of useless operators like FILE_OT_hidedot. 2015-12-03 12:00:46 +01:00

This issue was referenced by a7dbc0704f

This issue was referenced by a7dbc0704f217a827900bdc959db49da80632f23

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46918
No description provided.