Fix T46918: - Cleanup - FileBrowser - get rid of useless operators and update a bit keymap.

Looks like FILE_OT_hidedot was actually the only one to remove here.

Also, added more common parentdir/previousdir/nextdir shortcuts, and R for reload.